--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-Hello Andrea
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>ABOOKS - HOMEPAGE</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Merriweather', serif;
+            font-size: 14px;
+            background: #efefef;
+        }
+        h1 {
+            font-size: 1.8em;
+        }
+        nav {
+            border-bottom: 1px dashed #ccc;    
+        }
+        .box {
+            background: #fff;
+            padding: 120px;
+            border: 1px solid #cfcfcf;
+        }
+        .container {
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+
+        <div class="container">
+        <div class="box">
+            <div class="row">
+            <h1>Books You Should Read Before Graduating From College</h1>
+
+            <p>&nbsp;</p>
+            
+            <p><strong>The Marriage Plot by Jeffrey Eugenides</strong> - Eugenides’ Virgin Suicides was fantastic, but The Marriage Plot is better. It tells the story of three college friends from Brown University–a woman and two men–and follows them during their first year post-graduation.</p>
+
+            <p>Even though it’s set in the early 80s, it sums up quintessential student life with the parties, the insecurities and the mistakes. It’s really in each character's failures that you learn the typical graduation pitfalls, and the comforting knowledge that no matter how bad everything is, at least it’s life experience.</p>
+            <p><strong>The Iliad by Homer</strong> - Not everything on this list is about helping with life advice - reading The Iliad will help you just by virtue of the fact that you'll be able to say you've read some Homer. Not that you should drop it into conversation too often or you'll become That Person.</p>
+
+            <p>The Iliad’s one of the most famous classical epic poems, and it’s still a great read. Literature as we know it generally came from the classics, and it gives a solid basis for everything we read now. On top of that, it's also a damn good story. If you get into it, you've also got The Odyssey and Virgil’s Aeneid to go.</p>
+            <p><strong>The Secret History by Donna Tartt</strong> - You’ve probably already read this but if you haven’t, I can’t recommend it more. It’s a historical, student-based thriller. Need I say more?</p>
+
+            <p>Not only does it explore the trope of the eccentric lecturer, it goes into the loneliness of student life and what it's like being sucked into a group or clique. If you fancy brushing up on Greek history, this is also the place to do it.</p>
+
+            <p><strong>Free Food for Millionaires by Min Jin Lee</strong> - I loved this book. It’s about an American-Korean woman who graduates from Princeton and battles between her parent’s choices for her future and what she wants for it.</p>
+
+            <p>It shows the culture clash between parents and children of different generations, as well as the pressure on graduates to deal with the expectations of everyone around them. The moral? You’re not going to be happy until you do what’s right for you.</p>
+
+            <p><strong>Jane Eyre by Charlotte Bronte</strong> - This book taught me to grow up. It has a pretty addictive plot, but more than that, it’s the story of Jane’s journey from childhood to adolescence and adulthood. She learns to let go, to adapt and finally, that there are some things you need to just accept. I can’t think of any better time to read this book than when you’re learning to do the same.</p>
+        </div>
+        </div>
+    </div>
+</body>
+</html>
